[gd_scene load_steps=37 format=3 uid="uid://df3w8nurqp4dl"]

[ext_resource type="Script" path="res://⚓local_🍉VisualNovel/director.gd" id="1_36c3q"]
[ext_resource type="Texture2D" uid="uid://bkfsr571tdwqf" path="res://🍋images/🪑grayscale/1280x720/grid.png" id="2_6by5p"]
[ext_resource type="PackedScene" uid="uid://bru7a2wmr7m8y" path="res://🎄addon_🍉VisualNovel/🌏GuiProgrammer_MessageWindows.tscn" id="4_qbs6l"]
[ext_resource type="PackedScene" uid="uid://b2ubr7dn0hb1m" path="res://🎄addon_🍉VisualNovel/🌏Illustrator.tscn" id="5_ocgan"]
[ext_resource type="Script" path="res://⚓local_🍉VisualNovel/programs_hub.gd" id="11_nqlsq"]
[ext_resource type="PackedScene" uid="uid://csqladmrcvyby" path="res://🎄addon_🍉VisualNovel/🌏Programmer_🛩Hub.tscn" id="12_8g6tr"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂scenario_player/📄Engine.gd" id="13_cddwg"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/bgm.gd" id="13_wxeto"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/choice.gd" id="14_6kfnn"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/department.gd" id="15_2sldy"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/goto.gd" id="16_ljm6w"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/img.gd" id="17_fqwej"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/label.gd" id="18_l7o0j"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/msg_speed.gd" id="19_c5wvs"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/m_wnd.gd" id="20_xc3sp"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/normal_text.gd" id="21_aimm3"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🍱message_windows/message_windows_hub.gd" id="21_kjvby"]
[ext_resource type="PackedScene" uid="uid://d245mt0k8bh53" path="res://🎄addon_🍉KeyConfig/🌏Illustrator.tscn" id="21_wljdh"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/normal_text_choice.gd" id="22_2cbvg"]
[ext_resource type="PackedScene" uid="uid://c5rj8mk8bwirj" path="res://🎄addon_🍉KeyConfig/🌏Musician_🌏BgMusics.tscn" id="23_5bwgy"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/quit.gd" id="23_qnhnk"]
[ext_resource type="PackedScene" uid="uid://tpups3rpk2j8" path="res://🎄addon_🍉VisualNovel/🌏Musician_🌏BgMusics.tscn" id="24_8oncv"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/se.gd" id="24_kc4dp"]
[ext_resource type="PackedScene" uid="uid://ddu67m5n2ad5u" path="res://🎄addon_🍉KeyConfig/🌏Musician_🌏SoundFX.tscn" id="25_4re2d"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/sleep.gd" id="25_yi2f0"]
[ext_resource type="PackedScene" uid="uid://bkfvsu8du416f" path="res://🎄addon_🍉VisualNovel/🌏Musician_🌏SoundFX.tscn" id="26_hgiuu"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/telop.gd" id="26_rsr7q"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏programmer/📂instructions/var.gd" id="27_8d4wj"]
[ext_resource type="PackedScene" uid="uid://duy5utr23c82g" path="res://🎄addon_🍉KeyConfig/🌏Programmer_🛩ProgramsHub.tscn" id="27_t3xld"]
[ext_resource type="PackedScene" uid="uid://7owsgytxxeua" path="res://🎄addon_🍉VisualNovel/🌏ScenarioWriter.tscn" id="31_ywbpe"]
[ext_resource type="PackedScene" uid="uid://7d1c4sgwele3" path="res://🎄addon_🍉VisualNovel/🌏TelopCoordinator.tscn" id="32_12dmy"]
[ext_resource type="PackedScene" uid="uid://kqejd4uyxvtm" path="res://🎄addon_🍉KeyConfig/🌏Director.tscn" id="43_1kc47"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉visual_novel/🌏scenario_writer/switch_department.gd" id="44_c0141"]
[ext_resource type="PackedScene" uid="uid://bpcq5iy2or1wx" path="res://🎄addon_🍉VisualNovel/🌏ScenarioWriter_＋🛩️scenario_writers_hub.tscn" id="55_dfxei"]
[ext_resource type="PackedScene" uid="uid://dvlp1tdgeisf5" path="res://🎄addon_🍉KeyConfig/🌏TelopCoordinator.tscn" id="68_rpnem"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_glhd8"]

[node name="🌏Director" type="Node2D"]
material = SubResource("CanvasItemMaterial_glhd8")
script = ExtResource("1_36c3q")

[node name="Grid" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(640, 360)
texture = ExtResource("2_6by5p")

[node name="🌏Illustrator" type="Node2D" parent="."]
visible = false

[node name="📂🍉VisualNovel" parent="🌏Illustrator" instance=ExtResource("5_ocgan")]

[node name="ーーーーアドオンーーーー" type="Node" parent="🌏Illustrator"]

[node name="📂🍉KeyConfig" parent="🌏Illustrator" instance=ExtResource("21_wljdh")]

[node name="🌏Musician" type="Node" parent="."]

[node name="🌏BgMusics" type="Node" parent="🌏Musician"]

[node name="📂🍉VisualNovel" parent="🌏Musician/🌏BgMusics" instance=ExtResource("24_8oncv")]

[node name="ーーーーアドオンーーーー" type="Node" parent="🌏Musician/🌏BgMusics"]

[node name="📂🍉KeyConfig" parent="🌏Musician/🌏BgMusics" instance=ExtResource("23_5bwgy")]

[node name="🌏SoundFX" type="Node" parent="🌏Musician"]

[node name="📂🍉VisualNovel" parent="🌏Musician/🌏SoundFX" instance=ExtResource("26_hgiuu")]

[node name="ーーーーアドオンーーーー" type="Node" parent="🌏Musician/🌏SoundFX"]

[node name="📂🍉KeyConfig" parent="🌏Musician/🌏SoundFX" instance=ExtResource("25_4re2d")]

[node name="🌏Programmer" type="Node" parent="."]

[node name="🛩️Hub" type="Node" parent="🌏Programmer"]
script = ExtResource("11_nqlsq")

[node name="ーーーーアドオンーーーー" type="Node" parent="🌏Programmer/🛩️Hub"]

[node name="📄Nodes_🍉VisualNovel" parent="🌏Programmer/🛩️Hub" instance=ExtResource("12_8g6tr")]

[node name="📄Nodes_🍉KeyConfig" parent="🌏Programmer/🛩️Hub" instance=ExtResource("27_t3xld")]

[node name="📂ScenarioPlayer_🍉VisualNovel" type="Node" parent="🌏Programmer"]

[node name="📄Engine_🍉VisualNovel" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel"]
script = ExtResource("13_cddwg")

[node name="📂Instructions" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel"]

[node name="📗BgMusic" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("13_wxeto")

[node name="📗Choice" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("14_6kfnn")

[node name="📗Department" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("15_2sldy")

[node name="📗Goto" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("16_ljm6w")

[node name="📗Img" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("17_fqwej")

[node name="📗Label" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("18_l7o0j")

[node name="📗MsgSpeed" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("19_c5wvs")

[node name="📗MsgWnd" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("20_xc3sp")

[node name="📘NormalText" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("21_aimm3")

[node name="📘NormalTextChoice" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("22_2cbvg")

[node name="📗Quit" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("23_qnhnk")

[node name="📗SoundFx" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("24_kc4dp")

[node name="📗Sleep" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("25_yi2f0")

[node name="📗Telop" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("26_rsr7q")

[node name="📗Var" type="Node" parent="🌏Programmer/📂ScenarioPlayer_🍉VisualNovel/📂Instructions"]
script = ExtResource("27_8d4wj")

[node name="🌏Programmer_MessageWindow" type="Node" parent="."]

[node name="🛩️Hub" type="Node" parent="🌏Programmer_MessageWindow"]
script = ExtResource("21_kjvby")

[node name="📂🍉VisualNovel" parent="🌏Programmer_MessageWindow" instance=ExtResource("4_qbs6l")]

[node name="🌏ScenarioWriter" type="Node" parent="."]

[node name="🛩️Hub_🍉VisualNovel" parent="🌏ScenarioWriter" instance=ExtResource("55_dfxei")]

[node name="📘DepartmentControl" type="Node" parent="🌏ScenarioWriter"]
script = ExtResource("44_c0141")

[node name="📂🍉VisualNovel" parent="🌏ScenarioWriter" instance=ExtResource("31_ywbpe")]

[node name="🌏TelopCoordinator" type="CanvasLayer" parent="."]
visible = false

[node name="📂🍉VisualNovel" parent="🌏TelopCoordinator" instance=ExtResource("32_12dmy")]

[node name="ーーーーアドオンーーーー" type="Node" parent="🌏TelopCoordinator"]

[node name="📂🍉KeyConfig" parent="🌏TelopCoordinator" instance=ExtResource("68_rpnem")]

[node name="ーーーーアドオンーーーー" type="Node" parent="."]

[node name="🛩️KeyConfigHub" parent="." instance=ExtResource("43_1kc47")]
